--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,400;0,9..40,600;0,9..40,800;1,9..40,400;1,9..40,800&display=swap" rel="stylesheet">
     <title>FinBits</title>
     <link rel = "stylesheet" href = "./style.css">
   </head>
